--- a/src/assets/localizations/en.lang.json
+++ b/src/assets/localizations/en.lang.json
@@ -1,4 +1,5 @@
 {
     "greeting": "Hi revised!",
-    "anotherKey": "My other key text"
+    "anotherKey": "My other key text",
+    "newKey": ""
 }
