--- a/src/assets/localizations/en.lang.json
+++ b/src/assets/localizations/en.lang.json
@@ -1,6 +1,7 @@
 {
     "greeting": "Hi revised!",
     "anotherKey": "My other key text",
-    "bottomText": "",
-    "newKey": "New Key Text"
+    "newKey": "New Key Text",
+    "bottomText": ""
+
 }
