--- a/src/assets/localizations/en.lang.json
+++ b/src/assets/localizations/en.lang.json
@@ -2,6 +2,7 @@
     "greeting": "Hi revised!",
     "anotherKey": "My other key text",
     "newKey": "New Key Text",
-    "bottomText": ""
+    "bottomText": "",
+    "keyism": ""
 
 }
